# hiROS

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
launch/: inference.launch  interface.launch  skynet.launch  system.launch
models/: label2int.json
msg/: Gestures.msg
scripts/: gesture_inference.py  inference.py  listener.py  model.py  thresholds.py
scripts/sense/: loading.py
src/: loader.py  model.py  s0_frames.py  s1_get_skeletons_from_training_imgs.py  s2_put_skeleton_txts_to_a_single_txt.py  s3_train.py  s4_test.py  sx_rename.py  t2_put_skeleton_txts_to_a_single_txt.py  t4_inference.py  t4_webcam.py
src/checkpoints/Sample/: lstm000.ckpt  lstm100.ckpt
tools/: an_example_skeleton_of_standing.py  images2video.py  png2jpgs.py  video2images.py
utils/: lib_classifier.py  lib_commons.py  lib_feature_proc.py  lib_images_io.py  lib_openpose.py  lib_skeletons_io.py  lib_tracker.py
